--- a/templates/contacto.html
+++ b/templates/contacto.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contacto</title>
-    <link rel="stylesheet" href="/styles/styles.css">
-    <link rel="shortcut icon" href="../Assets/images/icon.png">
+    <link rel="stylesheet" href="/trabajopagina/graphel/styles/styles.css">
+    <link rel="shortcut icon" href="/trabajopagina/graphel/imagenes/891.jpg">
 </head>
 <body>
     <header>
@@ -14,10 +14,10 @@
         </div>
         <div class="navigator">
             <nav>
-                <a class="inicio-contacto" href="/ndex.html">Inicio</a>
-                <a class="nosotros-contacto" href="nosotros.html">Nosotros</a>
-                <a class="servicios-contacto" href="servicios.html">Servicios</a>
-                <a class="contacto-contacto" href="contacto.html">Contacto</a>
+                <a class="inicio-contacto" href="/trabajopagina/graphel/ndex.html">Inicio</a>
+                <a class="nosotros-contacto" href="/trabajopagina/graphel/templates/nosotros.html">Nosotros</a>
+                <a class="servicios-contacto" href="/trabajopagina/graphel/templates/servicios.html">Servicios</a>
+                <a class="contacto-contacto" href="/trabajopagina/graphel/templates/contacto.html">Contacto</a>
             </nav>
         </div>
     </header>
@@ -69,7 +69,7 @@
             </div>
 
             <div class="mapa-container">
-                <img src="/imagenes/mapaGoogle.png" alt="map">
+                <img src="/trabajopagina/graphel/imagenes/mapaGoogle.png" alt="map">
             </div>
 
         </div>
